--- a/ex01/libftpp/Makefile
+++ b/ex01/libftpp/Makefile
@@ -5,51 +5,41 @@
 #                                                     +:+ +:+         +:+      #
 #    By: TheTerror <jfaye@student.42lyon.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/02/07 10:24:30 by TheTerror         #+#    #+#              #
-#    Updated: 2024/02/27 21:27:52 by TheTerror        ###   ########lyon.fr    #
+#    Created: 2024/02/23 16:59:24 by TheTerror         #+#    #+#              #
+#    Updated: 2024/02/27 21:24:05 by TheTerror        ###   ########lyon.fr    #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = btc
+NAME = libftpp.a
 
-LIBFTPP	=	$(LIBFTPP_PATH)libftpp.a
-
-LIBFTPP_PATH = ./libftpp/
 OBJ_PATH = ./.obj/
 
-INCLUDE = Include.h Date.hpp ExchangeRateBase.hpp CustomException.hpp BitcoinExchange.hpp
+INCLUDE = Libftpp.hpp MathTools.tpp Error.tpp
 
 CC = 				c++
 CPPFLAGS =			-std=c++98
 CFLAGS=				$(CPPFLAGS) -Wall -Werror -Wextra -g3
+AR = 				ar -rc
 RM =				rm -rf
 
-SRC = main.cpp Date.cpp ExchangeRateBase.cpp CustomException.cpp BitcoinExchange.cpp
+SRC =	Libftpp.cpp Itoa.cpp StrTools.cpp FileParsingTools.cpp OutputTools.cpp \
+		Error.cpp charTools.cpp
 
 OBJ = $(SRC:%.cpp=$(OBJ_PATH)%.o)
 
-all : make_libftpp $(NAME)
+all : $(NAME)
 
 $(OBJ_PATH)%.o : %.cpp $(INCLUDE)
 	@mkdir -p $(OBJ_PATH)
 	$(CC) $(CFLAGS) -c $< -o $@
 
-$(NAME) : $(OBJ) $(INCLUDE) $(LIBFTPP)
-	$(CC) $(CFLAGS) $(OBJ) $(LIBFTPP) -o $@
-
-make_libftpp :
-	make -C $(LIBFTPP_PATH)
-
-run : all
-	./$(NAME)
-valgrind : all
-	valgrind --show-leak-kinds=all --leak-check=full --track-fds=yes ./$(NAME)
+$(NAME) : $(OBJ) $(INCLUDE)
+	$(AR) $@ $(OBJ)
+	@ranlib $(NAME)
 
 clean :
-	@make clean -C $(LIBFTPP_PATH)
 	@$(RM) $(OBJ)
 	@$(RM) $(OBJ_PATH)
 fclean : clean
-	@make fclean -C $(LIBFTPP_PATH)
 	@$(RM) $(NAME)
 re : fclean all
