--- a/ex02/libftpp/Makefile
+++ b/ex02/libftpp/Makefile
@@ -6,7 +6,7 @@
 #    By: TheTerror <jfaye@student.42lyon.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/02/23 16:59:24 by TheTerror         #+#    #+#              #
-#    Updated: 2024/02/27 21:24:05 by TheTerror        ###   ########lyon.fr    #
+#    Updated: 2024/03/04 15:36:00 by TheTerror        ###   ########lyon.fr    #
 #                                                                              #
 # **************************************************************************** #
 
@@ -23,7 +23,7 @@ AR = 				ar -rc
 RM =				rm -rf
 
 SRC =	Libftpp.cpp Itoa.cpp StrTools.cpp FileParsingTools.cpp OutputTools.cpp \
-		Error.cpp charTools.cpp
+		Error.cpp charTools.cpp MathTools.cpp
 
 OBJ = $(SRC:%.cpp=$(OBJ_PATH)%.o)
 
